fix(service-overview): solves collapsing of container

--- a/assets/scss/components/_service-overview.scss
+++ b/assets/scss/components/_service-overview.scss
@@ -98,6 +98,8 @@ $service-overview-offset: $grid-gutter-half-width;
 }
 
 .service-overview__list {
+  width: 100%;
+
   @include media-breakpoint-up(lg) {
     flex: 1 0 60%;
     padding-right: spacing(16);
